--- a/MovieApp/Views/Movies/Index.cshtml
+++ b/MovieApp/Views/Movies/Index.cshtml
@@ -11,7 +11,7 @@
     @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
-    <tr>
+    <tr class="thead-light">
         <th>
             @Html.DisplayNameFor(model => model.Title)
         </th>
@@ -42,9 +42,9 @@
             @Html.DisplayFor(modelItem => item.Price)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Edit", "Edit", new { id=item.Id }, htmlAttributes: new { @class="btn btn-success"}) 
+            @Html.ActionLink("Details", "Details", new { id=item.Id }, htmlAttributes: new { @class="btn btn-primary"}) 
+            @Html.ActionLink("Delete", "Delete", new { id=item.Id }, htmlAttributes: new { @class="btn btn-danger"})
         </td>
     </tr>
 }
