--- a/MovieApp/Views/Login/Index.cshtml
+++ b/MovieApp/Views/Login/Index.cshtml
@@ -19,9 +19,9 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        @*<h4>LoginViewModel</h4>*@
-        <hr />
+
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
         <div class="form-group">
             @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -40,9 +40,10 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="SignIn" class="btn btn-default" />
+                <input type="submit" value="SignIn" class="btn btn-outline-primary" />
             </div>
         </div>
+
     </div>
 }
 
