--- a/MovieApp/Views/Movies/Create.cshtml
+++ b/MovieApp/Views/Movies/Create.cshtml
@@ -50,14 +50,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-outline-warning" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Search")
 </div>
 
 <script src="~/Scripts/jquery-3.4.1.min.js"></script>
