--- a/MovieApp/Views/Movies/Delete.cshtml
+++ b/MovieApp/Views/Movies/Delete.cshtml
@@ -50,8 +50,9 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Delete" class="btn btn-outline-danger" /> |
+            @Html.ActionLink("Back to List", "Search")
+            @*@Html.ActionLink("Back to List", "Index")*@
         </div>
     }
 </div>
