--- a/MovieApp/Views/Movies/Index.cshtml
+++ b/MovieApp/Views/Movies/Index.cshtml
@@ -27,7 +27,8 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
+@foreach (var item in Model)
+{
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.Title)
