ボタンにアイコンを追加しました。

--- a/MovieApp/Views/Login/Index.cshtml
+++ b/MovieApp/Views/Login/Index.cshtml
@@ -40,11 +40,10 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="SignIn" class="btn btn-outline-primary" />
+            
+            <input type="submit" value="&#xf2f6; SignIn" class="btn btn-outline-primary fas" />
         </div>
     </div>
-
-    <i class="fab fa-google"></i>
 
 </div>
 }
