--- a/MovieApp/Views/Movies/Delete.cshtml
+++ b/MovieApp/Views/Movies/Delete.cshtml
@@ -50,7 +50,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-outline-danger" /> |
+            <input type="submit" value="&#xf2ed; Delete" class="btn btn-outline-danger far" /> |
             @Html.ActionLink("Back to List", "Search")
             @*@Html.ActionLink("Back to List", "Index")*@
         </div>
