--- a/MovieApp/Views/Movies/Create.cshtml
+++ b/MovieApp/Views/Movies/Create.cshtml
@@ -50,7 +50,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-outline-warning" />
+                <input type="submit" value="&#xf067; Create" class="btn btn-outline-warning fas" />
             </div>
         </div>
     </div>
