--- a/MovieApp/Views/Movies/Edit.cshtml
+++ b/MovieApp/Views/Movies/Edit.cshtml
@@ -52,7 +52,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-outline-success" />
+                <input type="submit" value="&#xf044; Save" class="btn btn-outline-success far" />
             </div>
         </div>
     </div>
