Views/Models/Search.cshtml , タイトル名、公開日、ジャンル名、金額 の項目に対してアイコンを追加しました。

--- a/MovieApp/Views/Movies/Search.cshtml
+++ b/MovieApp/Views/Movies/Search.cshtml
@@ -60,15 +60,19 @@
     <thead>
         <tr class="thead-light">
             <th>
+                <i class="fas fa-film"></i>
                 @Html.DisplayNameFor(model => movie.Title)
             </th>
             <th>
+                <i class="fas fa-theater-masks"></i>
                 @Html.DisplayNameFor(model => movie.Published_at)
             </th>
             <th>
+                <i class="fas fa-bars"></i>
                 @Html.DisplayNameFor(model => movie.Genre)
             </th>
             <th>
+                <i class="fas fa-dollar-sign"></i>
                 @Html.DisplayNameFor(model => movie.Price)
             </th>
             <th></th>
