--- a/MovieApp/Views/Movies/Partial.cshtml
+++ b/MovieApp/Views/Movies/Partial.cshtml
@@ -14,13 +14,13 @@
             </div>
 
             <div class="modal-body">
-                <dt class="col-sm-2">
+                <div class="col-sm-2">
                     作品情報：
-                </dt>
-                <dd class="col-sm-10">
+                </div>
+                <div class="col-sm-10">
                     ここに映画の情報出ます！！
                     @Html.DisplayFor(model => model.Title)
-                </dd>
+                </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                     <button type="button" class="btn btn-primary">Save changes</button>
@@ -32,48 +32,4 @@
 </div>
 
 
-@*@model IEnumerable<MovieApp.Models.Movie>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Title)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Published_at)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Genre)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Price)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Title)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Published_at)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Genre)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Price)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
-
-</table>*@
