--- a/MovieApp/Views/Movies/Search.cshtml
+++ b/MovieApp/Views/Movies/Search.cshtml
@@ -98,7 +98,7 @@
                 <td>
                     @Html.ActionLink(" Edit", "Edit", new { id = item.Id }, htmlAttributes: new { @class = "btn btn-success far fa-edit" })
 
-                    <button value="Details" class="btn btn-primary j_btn" id="@item.Id" data-url="@Url.Action("Details_Json")" data-bs-toggle="modal" data-bs-target="#ModalHere">
+                    <button type="button" value="Details" class="btn btn-primary j_btn" id="@item.Id" data-url="@Url.Action("Details_Json")" data-bs-target="#exampleModal">
                         <!-- icon -->
                         Details
                     </button>
@@ -115,35 +115,7 @@
 @*@model Movie*@
 <!-- Modal Window-->
 <div id="ModalHere">
-    @*@Html.Partial("Partial")*@
-    @*<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-
-                <div class="modal-body">
-                    <dt class="col-sm-2">
-                        ユーザー名：
-                    </dt>
-                    <dd class="col-sm-10">
-                        @Html.DisplayFor(model => model.TitleName)
-                    </dd>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Save changes</button>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </div>*@
-
+    <p>Million GOD!!</p>
 </div>
 
 
@@ -151,15 +123,16 @@
 
 <!-- JQuery -->
 <script>
+
     $(document).ready(function () {
         $(".j_btn").click(function () {
 
 
-            const url = $(".j_btn").data('url');
+            const url = $(this).data('url');
             const id = $(this).attr('id');
             console.log(id);
             console.log(url);
-            alert("Hello, VS!!");
+            $("#ModalHere").html("<p>浦安鉄筋家族</p>");
 
 
             $.ajax({
@@ -169,22 +142,18 @@
             })
 
                 .done(function (response) {
-                    const modal_window = $("#ModalHere");
-                    modal_window.html(response);
-
-                    //const modal_window = $("#ModalHere").find('.modal');
-                    //modal_window.removeClass('fade');
-                    //modal_window.addClass('show');
+                    $("#ModalHere").html(response);
+                    $("#ModalHere").find('.modal').modal('show');
                     console.log(response);
                 })
                 .fail(function (xhr) {
                     console.log("Failed...");
                     console.log(xhr);
                 })
-                .always(function (xhr, msg) {
-                    console.log("the part of messesages that always indicated...");
-                    console.log(xhr, msg);
-                });
+                //.always(function (xhr, msg) {
+                //    console.log("the part of messesages that always indicated...");
+                //    console.log(xhr, msg);
+                //});
         });
     });
 
