--- a/MovieApp/Views/Movies/Search.cshtml
+++ b/MovieApp/Views/Movies/Search.cshtml
@@ -66,6 +66,7 @@
             <th>
                 <i class="fas fa-theater-masks"></i>
                 @Html.DisplayNameFor(model => movie.Published_at)
+                <a href="@Url.Action("Search", "Movies", new { Sign = "1"})"><i class="fas fa-caret-down" style="color:#495057"></i></a>
             </th>
             <th>
                 <i class="fas fa-bars"></i>
