映画アプリケーション、メイン画面、公開日の項目の右にある下向き三角形、押下時、映画情報が公開日の昇順・降順で並び替わるように修正しました。

--- a/MovieApp/Views/Movies/Delete.cshtml
+++ b/MovieApp/Views/Movies/Delete.cshtml
@@ -51,7 +51,7 @@
 
         <div class="form-actions no-color">
             <input type="button" value="&#xf2ed; Delete" class="btn btn-outline-danger far del_btn" /> |
-            @*<input type="submit" value="&#xf2ed; Delete" class="btn btn-outline-danger far" />*@ |
+            @*<input type="submit" value="&#xf2ed; Delete" class="btn btn-outline-danger far" />*@
             @Html.ActionLink("Back to List", "Search")
             @*@Html.ActionLink("Back to List", "Index")*@
         </div>
