--- a/MovieApp/Views/Movies/Edit.cshtml
+++ b/MovieApp/Views/Movies/Edit.cshtml
@@ -52,15 +52,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="&#xf044; Save" class="btn btn-outline-success far" />
+                <input type="submit" value="&#xf044; Save" class="btn btn-outline-success far" /> |
+                @Html.ActionLink("Back to List", "Search")
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Search")
-</div>
 
 <script src="~/Scripts/jquery-3.4.1.min.js"></script>
 <script src="~/Scripts/jquery.validate.min.js"></script>
