--- a/MovieApp/Views/Movies/Partial.cshtml
+++ b/MovieApp/Views/Movies/Partial.cshtml
@@ -14,16 +14,15 @@
             </div>
 
             <div class="modal-body">
-                <div class="col-sm-2">
-                    作品情報：
-                </div>
+                <div>作品情報：</div>
+                @*<div class="col-sm-2">作品情報：</div>*@
                 <div class="col-sm-10">
                     ここに映画の情報出ます！！
                     @Html.DisplayFor(model => model.Title)
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    @*<button type="button" class="btn btn-primary">Save changes</button>*@
                 </div>
             </div>
 
