--- a/MovieApp/Views/Movies/Search.cshtml
+++ b/MovieApp/Views/Movies/Search.cshtml
@@ -21,21 +21,25 @@
 
         <div>
 
-            <div class="col-md-10 mb-2">
+            <div class="mb-2">
+            @*<div class="col-md-10 mb-2">*@
                 @Html.LabelFor(model => model.GenreName, htmlAttributes: new { @class = "control-label col-md-2" })
                 @Html.EditorFor(model => model.GenreName, new { htmlAttributes = new { @class = "" } })
                 @Html.ValidationMessageFor(model => model.GenreName, "", new { @class = "text-danger" })
-                
+
                 @Html.LabelFor(model => model.TitleName, htmlAttributes: new { @class = "control col-md-2" })
                 @Html.EditorFor(model => model.TitleName, new { htmlAttributes = new { @class = "" } })
                 @Html.ValidationMessageFor(model => model.TitleName, "", new { @class = "text-danger" })
 
                 <input type="submit" value="&#xf002; Search" class="btn btn-outline-primary fas" />
 
+                <a href="@Url.Action("CSV_Download", "Movies")" class="btn btn-outline-info ml-4" style="display:inline-block"><i class="fas fa-file-csv"></i> CSV Download</a>
             </div>
         </div>
     </div>
 }
+
+
 
 
 @{
@@ -45,6 +49,9 @@
 <table class="table table-hover">
     <thead>
         <tr class="thead-light">
+            <th>
+                <i class="far fa-images"></i> 画像
+            </th>
             <th>
                 <i class="fas fa-film"></i>
                 @Html.DisplayNameFor(model => movie.Title)
@@ -62,14 +69,20 @@
                 <i class="fas fa-dollar-sign"></i>
                 @Html.DisplayNameFor(model => movie.Price)
             </th>
-            <th></th>
+            <th>
+                <i class="fas fa-gamepad"></i>
+                コントローラー
+            </th>
         </tr>
     </thead>
 
     <tbody>
+        <!-- 一覧表示部分 -->
         @foreach (var item in Model.Movies)
         {
             <tr>
+                <td>空</td>
+
                 <td>
                     @Html.DisplayFor(modelItem => item.Title)
                 </td>
@@ -86,6 +99,7 @@
                         <a href="@Url.Action("Edit", "Movies", new {id = item.Id})" class="btn btn-success"><i class="far fa-edit"></i> Edit</a>
                         <a style="color:white;cursor:pointer" data-url="@Url.Action("Details_Json")" id="@item.Id" class="btn btn-primary j_btn" data-bs-target="#exampleModal"><i class="fas fa-info-circle"></i> Details</a>
                         <a href="@Url.Action("Delete", "Movies", new {id = item.Id})" class="btn btn-danger"><i class="far fa-trash-alt"></i> Delete</a>
+                        <a href="" class="btn btn-info"><i class="far fa-image"></i> Upload-Image</a>
                 </td>
             </tr>
         }
@@ -94,10 +108,8 @@
 </table>
 
 
-@*@model Movie*@
 <!-- Modal Window-->
 <div id="ModalHere">
-    <p>Million GOD!!</p>
 </div>
 
 
